[project]
name = "huggingfacetransformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "diffusers>=0.36.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
